# meet-shahbaz-ai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: document_loader.py  embeddings.py  llm.py  main.py  rag.py  retriever.py  run_sanity_check.py  sheets.py  vector_store.py
client/: .env.production  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.css  App.tsx
client/src/components/: icons.tsx  markdown-text.tsx
client/src/lib/: chat-model.ts
data/chroma_db/: chroma.sqlite3
docker/: .dockerfile
documents/: syed-shahbaz-ali.md
