[project]
name = "meet-shahbaz-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "fastembed>=0.8.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-text-splitters>=1.1.2",
    "pymupdf4llm>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.50.0",
]
